# gsup-map-proxy

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: ci.yml  release.yml
src/: CMakeLists.txt  main.cpp
src/common/: Buffer.hpp
src/gsup/: GsupCodec.cpp  GsupCodec.hpp  GsupMessage.hpp  GsupTypes.hpp
src/ipa/: IpaCodec.cpp  IpaCodec.hpp  IpaFrame.hpp
src/map/: BerCodec.cpp  BerCodec.hpp  MapCodec.cpp  MapCodec.hpp  MapMessage.hpp  MapTypes.hpp
src/proxy/: Converter.cpp  Converter.hpp  ITransport.hpp  Proxy.cpp  Proxy.hpp  TransactionManager.cpp  TransactionManager.hpp
src/transport/: IpaServer.cpp  IpaServer.hpp  IpaSession.cpp  IpaSession.hpp  M3uaCodec.cpp  M3uaCodec.hpp  M3uaTypes.hpp  MapTransport.cpp  MapTransport.hpp  ScccpCodec.cpp  ScccpCodec.hpp  ScccpTypes.hpp
tests/: CMakeLists.txt
tests/gsup/: GsupCodecTest.cpp
tests/ipa/: IpaCodecTest.cpp
tests/map/: BerCodecTest.cpp  MapCodecTest.cpp
tests/proxy/: ConverterTest.cpp  ProxyTest.cpp  TransactionManagerTest.cpp
tests/transport/: IpaServerTest.cpp  M3uaCodecTest.cpp  MapTransportTest.cpp  ProxyEndToEndTest.cpp  ScccpCodecTest.cpp
