function(add_proxy_test target)
  add_executable(${target} ${ARGN})
  target_link_libraries(${target} PRIVATE proxy_lib GTest::gtest_main GTest::gmock_main)
  target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/src)
  gtest_discover_tests(${target})
endfunction()

function(add_transport_test target)
  add_executable(${target} ${ARGN})
  target_link_libraries(${target} PRIVATE transport_lib GTest::gtest_main GTest::gmock_main Boost::headers)
  target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/src)
  gtest_discover_tests(${target})
endfunction()

# Protocol-layer tests (no Boost)
add_proxy_test(gsup_codec_test    gsup/GsupCodecTest.cpp)
add_proxy_test(ipa_codec_test     ipa/IpaCodecTest.cpp)
add_proxy_test(ber_codec_test     map/BerCodecTest.cpp)
add_proxy_test(map_codec_test     map/MapCodecTest.cpp)
add_proxy_test(converter_test     proxy/ConverterTest.cpp)
add_proxy_test(transaction_test   proxy/TransactionManagerTest.cpp)
add_proxy_test(proxy_test         proxy/ProxyTest.cpp)

# Transport-layer tests (require Boost.Asio + real sockets)
add_transport_test(ipa_server_test    transport/IpaServerTest.cpp)
add_transport_test(m3ua_codec_test    transport/M3uaCodecTest.cpp)
add_transport_test(scccp_codec_test   transport/ScccpCodecTest.cpp)
add_transport_test(map_transport_test      transport/MapTransportTest.cpp)
add_transport_test(proxy_end_to_end_test  transport/ProxyEndToEndTest.cpp)
